--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,25 +87,24 @@ jobs:
             docker push sonergezgen/multi-worker:${BUILD_ID}
 
       - run:
-          name: Kustomize Deployment for Kubernetes
+          name: Kustomize PROD Deployment for Kubernetes
           command: |
-            
-
             if command -v kustomize &> /dev/null
             then
               export BUILD_ID=$(echo ${CIRCLE_BUILD_URL} | cut -d'/' -f 7)
               echo "Kustomize is already installed."
               kustomize version
 
-              #sed -i "s/\$(TAG)/${BUILD_ID}/g" environments/PROD/multi-k8/kustomization.yaml
               cd environments/PROD/multi-k8
               kustomize edit set image multi-client=sonergezgen/multi-client:${BUILD_ID}
               kustomize edit set image multi-server=sonergezgen/multi-server:${BUILD_ID}
               kustomize edit set image multi-worker=sonergezgen/multi-worker:${BUILD_ID}
+
               cd ../../../
+              sed -i "s/\$(TAG)/${BUILD_ID}/g" k8_files/client-deployment.yaml 
+              sed -i "s/\$(TAG)/${BUILD_ID}/g" k8_files/server-deployment.yaml 
+              sed -i "s/\$(TAG)/${BUILD_ID}/g" k8_files/worker-deployment.yaml 
               kubectl kustomize environments/PROD/multi-k8 | kubectl apply -f -
-              #kubectl apply -k environments/PROD/multi-k8
-              #cd environments/PROD/multi-k8
             else
               export BUILD_ID=$(echo ${CIRCLE_BUILD_URL} | cut -d'/' -f 7)
               wget https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2Fv3.8.5/kustomize_v3.8.5_linux_amd64.tar.gz
@@ -117,7 +116,13 @@ jobs:
               kustomize edit set image multi-client=sonergezgen/multi-client:${BUILD_ID}
               kustomize edit set image multi-server=sonergezgen/multi-server:${BUILD_ID}
               kustomize edit set image multi-worker=sonergezgen/multi-worker:${BUILD_ID}
+
               cd ../../../
+              sed -i "s/\$(TAG)/${BUILD_ID}/g" k8_files/client-deployment.yaml 
+              sed -i "s/\$(TAG)/${BUILD_ID}/g" k8_files/server-deployment.yaml 
+              sed -i "s/\$(TAG)/${BUILD_ID}/g" k8_files/worker-deployment.yaml 
+
+              
               kubectl kustomize environments/PROD/multi-k8 | kubectl apply -f -
               #kubectl apply -k environments/PROD/multi-k8
               #cd environments/PROD/multi-k8
