--- a/k8_files/client-deployment.yaml
+++ b/k8_files/client-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec: 
       containers:
       - name: client
-        image: sonergezgen/multi-client
+        image: sonergezgen/multi-client:$(TAG)
         imagePullPolicy: Always
         ports:
         - containerPort: 3000
