--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,3 @@
-# Docker
-# Build and push an image to Azure Container Registry
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
 trigger:
 - main
 
@@ -29,6 +25,10 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
+    - task: DockerInstaller@0
+      displayName: Install Docker CLI
+      inputs:
+        dockerVersion: '17.09.0-ce'
     - task: Docker@2
       displayName: Build and push CLIENT image to container registry
       inputs:
